--- a/index.html
+++ b/index.html
@@ -52,10 +52,10 @@
 	<p>Develop HTML/CSS/JS markup and templates to build responsive websites with a strong focus on maintainability, cross-browser compatibility and performance. Contribute to the ongoing efforts to develop and implement front-end web coding and design standards, and ensure that front-end design standards are met during development.</p>
 	<p><strong>Responsibilities:</strong></p>
 	<ul>
-		<li>Analyzes designs and implements an advanced, efficient front-end</li>
+		<li>Analyze designs and implements advanced, efficient front-end markup</li>
 		<li>Create and optimize a workflow using Static Site Generation adopted by the Front-end Team using Nunjucks templating, Vue.js, Webpack, Gulp and Rsync to a Remote Ubuntu Server</li>
 		<li>Setup and maintain an Ubuntu Server for Front-end Static Pages</li>
-		<li>Write a custom Pattern Library generator and deployment tasks using Node and Gulp within our Workflow</li>
+		<li>Write a custom Pattern Library generator and deployment tasks using Node and Gulp within our workflow</li>
 		<li>Create reusable components for smart integration of similar features, and work with backend developers to see completed functionality through a successful execution and launch</li>
 		<li>Worked effectively within an agile, deadline-driven production process to complete web projects with rapid, iterative cycles</li>
 	</ul>
