--- a/index.html
+++ b/index.html
@@ -1,4 +1,6 @@
---- layout: default ---
+---
+layout: default
+---
 <div class="home">
 	<h1 class="page-heading">Peter Grillot</h1>
 	<h2>Front End Developer</h2>
