updates to resume

--- a/index.html
+++ b/index.html
@@ -11,22 +11,23 @@ layout: default
 	<ul>
 		<li>HTML5</li>
 		<li>CSS3 / Sass / Animation / Canvas</li>
-		<li>Javascript (ES6) / Babel / Webpack</li>
+		<li>JavaScript (ES6) / Babel / Webpack</li>
 	</ul>
 	<p><strong>Back-end Languages:</strong></p>
 	<ul>
-		<li>Node (Server Side Javascript)</li>
+		<li>Node (Server Side JavaScript)</li>
 		<li>Python</li>
 		<li>PHP</li>
 		<li>mySQL</li>
 		<li>MongoDB</li>
 		<li>JSON</li>
-		<li>Bash</li>
 		<li>Ubuntu / Linux</li>
 	</ul>
 	<p><strong>Workflow:</strong></p>
 	<ul>
 		<li>Sublime Text 3</li>
+		<li>Bash / tmux</li>
+		<li>Git / Github</li>
 		<li>Adobe Creative Suite</li>
 		<li>Ubuntu / Mac</li>
 	</ul>
@@ -50,11 +51,12 @@ layout: default
 	<p><strong>Responsibilities:</strong></p>
 	<ul>
 		<li>Analyze designs and implements advanced, efficient front-end markup</li>
-		<li>Create and optimize a workflow using Static Site Generation adopted by the Front-end Team using Nunjucks templating, Vue.js, Webpack, Gulp and Rsync to a Remote Ubuntu Server</li>
+		<li>Create and optimize a workflow using Static Site Generation adopted by the Front-end Team using Nunjucks templating, Vue.js, Webpack, Gulp and rsync to a Remote Ubuntu Server</li>
 		<li>Setup and maintain an Ubuntu Server for Front-end Static Pages</li>
+		<li>Create components using Vue.js to communicate with Backend via JSON</li>
 		<li>Write a custom Pattern Library generator and deployment tasks using Node and Gulp within our workflow</li>
-		<li>Create reusable components for smart integration of similar features, and work with backend developers to see completed functionality through a successful execution and launch</li>
-		<li>Worked effectively within an agile, deadline-driven production process to complete web projects with rapid, iterative cycles</li>
+		<li>Work with backend developers to see completed functionality through a successful execution and launch</li>
+		<li>Work effectively within an agile, deadline-driven production process to complete web projects with rapid, iterative cycles</li>
 	</ul>
 	<h3>Innovative Marketing Solutions / Interactive Media Developer JAN 2012 - NOV 2015 Washington, DC</h3>
 	<p>Designed, developed and maintained web applications contracted by Beam Suntory and other clients. Significant achievements include the MixxitUSA Recipe Database for the Portfolio Guide build for the Virtual Spirits Brand Education platform (PHP, MySQL Backend).</p>
@@ -65,7 +67,7 @@ layout: default
 		<li>Working with web developers and designers to create quality applications</li>
 		<li>Create graphics and images for applications</li>
 		<li>Process improvements to increase workflow efficiency</li>
-		<li>Ability to multitask to meet various deadline</li>
+		<li>Ability to multi-task to meet various deadline</li>
 		<li>Flexibility to meet clients goals</li>
 	</ul>
 	<h3>Innovative Marketing Solutions / Multimedia Developer JUNE 2010 - JAN 2012 Washington, DC</h3>
@@ -78,6 +80,11 @@ layout: default
 	</ul>
 	<h3>Various Freelance Work 2010 - Present Washington, DC</h3>
 	<p>Designed and built various web applications in my spare time. Some notable projects include custom blogs, Wordpress blogs, graphic design. Developing web applications using various APIs including Vimeo, Youtube & Twitter via Node.js, Express and Vue.js</p>
-
-	Education Figleaf Training Fast track to jQuery 2013 Upgrading to HTML5 2012 The Johns Hopkins University Computer Training Center Certificate, Web/Multimedia Design 2008 – 2010 West Virginia University Bachelor of Arts in Economics 2002 – 2006
+	<h3>Education</h3>
+	<ul>
+		<li>Figleaf Training Fast track to jQuery - 2013</li>
+		<li>Upgrading to HTML5 - 2012</li>
+		<li>The Johns Hopkins University Computer Training Center Certificate, Web/Multimedia Design 2008 – 2010</li>
+		<li>West Virginia University Bachelor of Arts in Economics 2002 – 2006</li>
+	</ul>
 </div>
