rearange and update exp

--- a/index.html
+++ b/index.html
@@ -11,21 +11,10 @@ layout: default
 	<ul>
 		<li>HTML5</li>
 		<li>CSS3 / Sass / Animation / Canvas</li>
-		<li>JavaScript (ES6) / Babel / Webpack</li>
-	</ul>
-	<p><strong>Back-end Languages:</strong></p>
-	<ul>
-		<li>Node (Server Side JavaScript)</li>
-		<li>Python</li>
-		<li>PHP</li>
-		<li>mySQL</li>
-		<li>MongoDB</li>
-		<li>JSON</li>
-		<li>Ubuntu / Linux</li>
+		<li>JavaScript (ES6+) / Babel / Webpack</li>
 	</ul>
 	<p><strong>Workflow:</strong></p>
 	<ul>
-		<li>Sublime Text 3</li>
 		<li>Bash / tmux</li>
 		<li>Git / Github</li>
 		<li>Adobe Creative Suite</li>
@@ -36,15 +25,26 @@ layout: default
 		<li>Webpack</li>
 		<li>Bootstrap</li>
 		<li>Sass</li>
-		<li>Vue.js</li>
-		<li>Angular.js</li>
-		<li>REST APIs</li>
+		<li>Vue / Vuex</li>
+		<li>React</li>
 		<li>Grunt / Gulp</li>
+	</ul>
+	<p><strong>Back-end Languages:</strong></p>
+	<ul>
+		<li>Node (Server Side JavaScript)</li>
+		<li>MongoDB</li>
+		<li>Django / Django Rest Framework</li>
+		<li>SQL</li>
+		<li>JSON / AJAX / REST</li>
+		<li>Ubuntu / Linux</li>
+		<li>PHP</li>
+		<li>mySQL</li>
 	</ul>
 	<p><strong>Other Familiar Languages and Tools:</strong></p>
 	<ul>
-		<li>Django</li>
+		<li>Python</li>
 		<li>Ruby on Rails</li>
+		<li>Vagrant / AWS</li>
 	</ul>
 	<h3>Experience Brightfind / Front-end Developer NOV 2015 - Present Silver Spring, MD</h3>
 	<p>Develop HTML/CSS/JS markup and templates to build responsive websites with a strong focus on maintainability, cross-browser compatibility and performance. Contribute to the ongoing efforts to develop and implement front-end web coding and design standards, and ensure that front-end design standards are met during development.</p>
@@ -55,7 +55,7 @@ layout: default
 		<li>Setup and maintain an Ubuntu Server for Front-end Static Pages</li>
 		<li>Create components using Vue.js to communicate with Backend via JSON</li>
 		<li>Write a custom Pattern Library generator and deployment tasks using Node and Gulp within our workflow</li>
-		<li>Work with backend developers to see completed functionality through a successful execution and launch</li>
+		<li>Work with Backend developers to see completed functionality through a successful execution and launch</li>
 		<li>Work effectively within an agile, deadline-driven production process to complete web projects with rapid, iterative cycles</li>
 	</ul>
 	<h3>Innovative Marketing Solutions / Interactive Media Developer JAN 2012 - NOV 2015 Washington, DC</h3>
@@ -82,6 +82,7 @@ layout: default
 	<p>Designed and built various web applications in my spare time. Some notable projects include custom blogs, Wordpress blogs, graphic design. Developing web applications using various APIs including Vimeo, Youtube & Twitter via Node.js, Express and Vue.js</p>
 	<h3>Education</h3>
 	<ul>
+		<li>Udemy: Django Rest Framework - 2017</li>
 		<li>Figleaf Training Fast track to jQuery - 2013</li>
 		<li>Upgrading to HTML5 - 2012</li>
 		<li>The Johns Hopkins University Computer Training Center Certificate, Web/Multimedia Design 2008 – 2010</li>
