--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 <div class="home">
-	<p>I enjoy making things for the web using skills I've learned in the past <span id="exp"></span> years.</p>
+	<p>I have been interested in web development ever since I learned Flash in high-school, and though I did stray to pursue a degree in Economics, I've always come back to tinkering with websites. I have been creating websites from design to development professionally for the past <span id="exp"></span> years.</p>
 	<script type="text/javascript">
 		var inTheBegining = new Date().getFullYear();
 		document.getElementById('exp').innerHTML = inTheBegining - 2008;
@@ -83,9 +83,9 @@ layout: default
 	<h3>Education</h3>
 	<ul>
 		<li>Udemy: Django Rest Framework - 2017</li>
-		<li>Figleaf Training Fast track to jQuery - 2013</li>
-		<li>Upgrading to HTML5 - 2012</li>
-		<li>The Johns Hopkins University Computer Training Center Certificate, Web/Multimedia Design 2008 – 2010</li>
-		<li>West Virginia University Bachelor of Arts in Economics 2002 – 2006</li>
+		<li>Figleaf Training: Fast track to jQuery - 2013</li>
+		<li>Figleaf Training: Upgrading to HTML5 - 2012</li>
+		<li>The Johns Hopkins University Computer Training Center: Certificate, Web/Multimedia Design 2008 - 2010</li>
+		<li>West Virginia University: Bachelor of Arts in Economics 2002 – 2006</li>
 	</ul>
 </div>
