updaed and rearranged

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ layout: default
 		<li>Bash / tmux</li>
 		<li>Git / Github</li>
 		<li>Adobe Creative Suite</li>
-		<li>Ubuntu / Mac</li>
+		<li>Linux / Mac</li>
 	</ul>
 	<p><strong>Frameworks, Preprocessors and Tools:</strong></p>
 	<ul>
@@ -26,25 +26,25 @@ layout: default
 		<li>Bootstrap</li>
 		<li>Sass</li>
 		<li>Vue / Vuex</li>
-		<li>React</li>
+		<li>React / Redux</li>
 		<li>Grunt / Gulp</li>
 	</ul>
 	<p><strong>Back-end Languages:</strong></p>
 	<ul>
 		<li>Node (Server Side JavaScript)</li>
 		<li>MongoDB</li>
-		<li>Django / Django Rest Framework</li>
+		<li>Django Rest Framework</li>
 		<li>SQL</li>
 		<li>JSON / AJAX / REST</li>
 		<li>Ubuntu / Linux</li>
-		<li>PHP</li>
-		<li>mySQL</li>
 	</ul>
 	<p><strong>Other Familiar Languages and Tools:</strong></p>
 	<ul>
-		<li>Python</li>
+		<li>Python / Django</li>
 		<li>Ruby on Rails</li>
 		<li>Vagrant / AWS</li>
+		<li>PHP</li>
+		<li>mySQL</li>
 	</ul>
 	<h3>Experience Brightfind / Front-end Developer NOV 2015 - Present Silver Spring, MD</h3>
 	<p>Develop HTML/CSS/JS markup and templates to build responsive websites with a strong focus on maintainability, cross-browser compatibility and performance. Contribute to the ongoing efforts to develop and implement front-end web coding and design standards, and ensure that front-end design standards are met during development.</p>
